[package]
name = "substrate-id-to-account"
version = "0.1.0"
edition = "2018"

[features]
default = ['std']
std = [
    'frame-support/std',
    'cumulus-primitives-core/std',
]

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'


[dependencies.cumulus-primitives-core]
default-features = false
git = 'https://github.com/paritytech/cumulus.git'
branch = 'rococo-v1'
